--- a/ecom-frontend/ecom-site/package.json
+++ b/ecom-frontend/ecom-site/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "cookie": "^0.6.0",
+    "js-cookie": "^3.0.5",
     "next": "14.2.6",
     "react": "^18",
     "react-dom": "^18",
@@ -20,6 +22,8 @@
     "sharp": "^0.33.5"
   },
   "devDependencies": {
+    "@types/cookie": "^0.6.0",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
